tests/test029.err
error: test029.tig:4:14: a field named `a' belonging to the type `t' was expected here
