tests/test029.tig
/* ERR: unexpected field */
let
  type t = {a: int}
  var x := t{b = 42}
in
end
